--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,6 @@ Suggests:
     roxygen2
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
-Imports: dplyr,
-    magrittr,
+Imports: magrittr,
     utils,
     withr
