--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,8 +21,10 @@ Suggests:
     testthat,
     knitr,
     roxygen2
-RoxygenNote: 6.0.1
+RoxygenNote: 6.0.1.9000
 Roxygen: list(markdown = TRUE)
 Imports: magrittr,
     utils,
     withr
+URL: https://github.com/ropenscilabs/defender
+BugReports: https://github.com/ropenscilabs/defender/issues
