--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Suggests:
     miniUI
 RoxygenNote: 6.0.1.9000
 Roxygen: list(markdown = TRUE)
-Imports: magrittr,
+Imports: 
+    magrittr,
     utils,
     withr
 URL: https://github.com/ropenscilabs/defender
